--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" prefHeight="84.0" prefWidth="195.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" prefHeight="84.0" prefWidth="195.0" stylesheets="@styles.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
@@ -27,7 +27,7 @@
    <children>
       <HBox spacing="5.0" GridPane.rowIndex="1">
          <children>
-            <Button mnemonicParsing="false" text="OK">
+            <Button mnemonicParsing="false" style="-fx-text-fill: white;" text="OK">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
@@ -39,6 +39,6 @@
             <Insets left="5.0" right="5.0" />
          </GridPane.margin>
       </HBox>
-      <Label text="My Label" />
+      <Label fx:id="label" text="My Label" />
    </children>
 </GridPane>
